--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
 
 <body>
     <header>
-        <h1>Luxury Spain</h1>
+        <div class="logo">
+            <h1>Luxury Spain</h1>
+        </div>
         <ul>
         </ul>
     </header>
@@ -31,7 +33,8 @@
         <div class="housecontainer">
             <img class="arepa" src="./img/Vector 1.svg" alt="">
         </div>
-        <script src="./app.js"></script>
+    </div>
+    <script src="./app.js"></script>
 </body>
 
 </html>
